# gitstore

./: .gitignore  CHANGELOG.md  Makefile  README.md  RELEASING.md  TESTING.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  release-rust.yml  release-server.yml
cpp/: CMakeLists.txt  README.md  vcpkg.json
cpp/docs/: api.md
cpp/include/vost/: batch.h  error.h  fs.h  gitstore.h  mirror.h  notes.h  types.h  vost.h
cpp/src/: batch.cpp  copy.cpp  fs.cpp  gitstore.cpp  glob.cpp  internal.h  lock.cpp  mirror.cpp  notes.cpp  paths.cpp  tree.cpp
cpp/tests/: CMakeLists.txt  test_apply.cpp  test_batch.cpp  test_copy.cpp  test_fs_read.cpp  test_fs_write.cpp  test_glob.cpp  test_history.cpp  test_mirror.cpp  test_move.cpp  test_notes.cpp  test_pack.cpp  test_stat.cpp  test_store.cpp
docs/: api.md  cli-tutorial.md  cli.md  drop-compat-layer.md  fsspec.md  index.md  paths.md  sqlite-backend-migration.md  testing.md
docs/stylesheets/: extra.css
gitstore/: __init__.py  repo.py  tree.py
interop/: cpp_read.cpp  cpp_write.cpp  fixtures.json  git_read.sh  py_read_test.py  py_write.py  run.sh  ts_read.test.ts  ts_write.ts
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/docs/: api.md
rs/: Cargo.toml  LICENSE  README.md
rs/examples/: rs_read.rs  rs_write.rs
rs/src/: batch.rs  copy.rs  error.rs  exclude.rs  fileobj.rs  fs.rs  glob.rs  lib.rs  lock.rs  mirror.rs  notes.rs  paths.rs  refdict.rs  reflog.rs  store.rs  tree.rs  types.rs
rs/src/cli/: basic.rs  history.rs  mirror.rs  mod.rs  notes.rs  refs.rs  serve.rs
rs/tests/: integration.rs  test_apply.rs  test_batch.rs  test_copy.rs  test_copy_from_ref.rs  test_copy_ref.rs  test_fileobj.rs  test_fs_read.rs  test_fs_write.rs  test_glob.rs  test_history.rs  test_mirror.rs  test_move.rs  test_notes.rs  test_pack.rs  test_stat.rs  test_store.rs  test_types.rs
rs/tests/common/: mod.rs
scripts/: test-parity.sh
src/gitstore/: __init__.py  _cli_entry.py  _compat.py  _exclude.py  _fileobj.py  _fuse.py  _lock.py  _objsize.py  batch.py  cli.py  copy.py  exceptions.py  fs.py  mirror.py  notes.py  repo.py  sync.py  tree.py  tx.py
src/gitstore/cli/: __init__.py  _archive.py  _basic.py  _cp.py  _helpers.py  _mirror.py  _mount.py  _refs.py  _serve.py  _sync.py  (+3 more)
src/vost/: __init__.py  _fileobj.py  _fsspec.py  _fuse.py  _glob.py  _lock.py  _objsize.py  batch.py  exceptions.py  fs.py  mirror.py  notes.py  repo.py  tree.py
tests/: conftest.py  test_apply.py  test_auto_create.py  test_backup_restore.py  test_batch.py  test_cli.py  test_cli_archive.py  test_cli_cp.py  test_cli_format.py  test_cli_ls.py  test_cli_refs.py  test_cli_web.py  test_cmp_cli.py  test_copy.py  test_copy_from_ref.py  test_copy_ref.py  test_exclude.py  test_fileobj.py  test_fs_read.py  test_fs_write.py  test_fuse.py  test_glob.py  test_head.py  test_history.py  test_integration.py  test_message.py  test_move.py  test_notes.py  test_objsize.py  test_pack.py  test_ref_path.py  test_repo.py  test_serve.py  test_stat.py  test_store_fs.py  test_sync.py  test_sync_api.py  test_tree.py  test_watch.py
ts/: README.md  deno.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ts/docs/: api.md
ts/src/: batch.ts  copy.ts  exclude.ts  fileobj.ts  fs.ts  gitstore.ts  glob.ts  index.ts  lock.ts  mirror.ts  notes.ts  paths.ts  refdict.ts  reflog.ts  tree.ts  types.ts
ts/tests/: apply.test.ts  batch.test.ts  copy-from-ref.test.ts  copy-ref.test.ts  copy.test.ts  deno_compat_test.ts  exclude.test.ts  fileobj.test.ts  fs-read.test.ts  fs-write.test.ts  glob.test.ts  head.test.ts  helpers.ts  history.test.ts  integration.test.ts  message.test.ts  mirror.test.ts  move.test.ts  notes.test.ts  pack.test.ts  repo.test.ts  stat.test.ts  store-fs.test.ts  sync-api.test.ts  sync.test.ts  tree.test.ts  typecheck.test.ts  validation.test.ts
vost-server/: Cargo.toml
vost-server/src/: main.rs
(+53 files in other folders)
