[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitstore"
version = "0.56.0"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "dulwich>=0.22.0",
]

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "watchfiles>=1.0.0",
]
dev = [
    "gitstore[cli]",
    "pytest>=8.0",
]

[project.scripts]
gitstore = "gitstore.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitstore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
