[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitstore"
version = "0.59.4"
description = "A versioned filesystem backed by bare Git repositories"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "dulwich>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mhalle/gitstore"
Repository = "https://github.com/mhalle/gitstore"
Issues = "https://github.com/mhalle/gitstore/issues"
Changelog = "https://github.com/mhalle/gitstore/blob/master/CHANGELOG.md"

[project.optional-dependencies]
cli = [
    "click>=8.0",
    "watchfiles>=1.0.0",
]
fuse = [
    "mfusepy>=3.0",
]
dev = [
    "gitstore[cli]",
    "pytest>=8.0",
]

[project.scripts]
gitstore = "gitstore.cli:main"

[tool.hatch.build.targets.sdist]
exclude = ["rs/target", "ts/node_modules", "site", "tmp"]

[tool.hatch.build.targets.wheel]
packages = ["src/gitstore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
