[package]
name = "gitstore"
version = "0.1.0"
edition = "2021"
description = "A versioned filesystem backed by a bare git repository"
license = "Apache-2.0"

[dependencies]
gix = { version = "0.72", default-features = false, features = ["basic"] }
gix-lock = "15"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[[example]]
name = "rs_write"

[[example]]
name = "rs_read"
