[package]
name = "gitstore"
version = "0.3.1"
edition = "2021"
rust-version = "1.75"
description = "A versioned filesystem backed by a bare git repository"
license = "Apache-2.0"
repository = "https://github.com/mhalle/gitstore"
homepage = "https://github.com/mhalle/gitstore/tree/master/rs"
readme = "README.md"
keywords = ["git", "filesystem", "versioned", "storage"]
categories = ["filesystem", "database-implementations"]
exclude = [
    "tests/",
    "examples/",
]

[dependencies]
gix = { version = "0.72", default-features = false, features = ["basic"] }
gix-lock = "15"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[[example]]
name = "rs_write"

[[example]]
name = "rs_read"
